--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,12 @@
         <relativePath/>
     </parent>
 
-    <dependencies>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
+    </properties>
 
+    <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -42,6 +46,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -54,7 +59,7 @@
                 <plugin>
                     <groupId>com.spotify</groupId>
                     <artifactId>docker-maven-plugin</artifactId>
-                    <version>0.2.9</version>
+                    <version>0.4.3</version>
                     <configuration>
                         <skipDockerBuild>true</skipDockerBuild>
                     </configuration>
