--- a/discovery/pom.xml
+++ b/discovery/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <artifactId>demo</artifactId>
         <groupId>com.anla</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>discovery</artifactId>
     <description>discovery app</description>
     <properties>
-        <start-class>com.anla.monitor.DiscoveryApplication</start-class>
+        <start-class>com.anla.discovery.DiscoveryApplication</start-class>
     </properties>
 
     <dependencies>
