--- a/discovery/src/main/docker/Dockerfile
+++ b/discovery/src/main/docker/Dockerfile
@@ -1,8 +1,8 @@
 FROM java:8
-VOLUME /tmp
+VOLUME /tmp/docker
 RUN mkdir /app
-ADD discovery-1.0.0-SNAPSHOT.jar /app/app.jar
-ADD runboot.sh /app/
+COPY discovery-1.1-SNAPSHOT.jar /app/app.jar
+COPY runboot.sh /app/
 RUN bash -c 'touch /app/app.jar'
 WORKDIR /app
 RUN chmod a+x runboot.sh
